Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!


* Verilator 3.825***


* Verilator 3.824 2011/10/25

***  Fix "always @ (* )", bug403, bug404.  [Walter Lavino]

***  Add ASSIGNIN as suppressable error.  [Jeremy Bennett]

**** Fix 3.823 constructor core dump on Debian, bug401.  [Ahmed El-Mahmoudy]


* Verilator 3.823 2011/10/20

***  Support $ceil, $floor, etc.  [Alex Solomatnikov]

***  Add configure options for cc warnings and extended tests.  [Ruben Diez]

***  Add -Wall reporting ASSIGNDLY on assignment delays.  [Ruben Diez]

***  Fix UNDRIVEN warnings inside DPI import functions.  [Ruben Diez]

***  Fix --help output to go to stderr, not stdout, bug397.  [Ruben Diez]

**** Fix DPI import output of 64 bits, bug398. [Mike Denio]

**** Fix DPI import false BLKSEQ warnings.  [Alex Solomatnikov]

**** Fix MSVC compile warning with trunc/round, bug394. [Amir Gonnen]

**** Fix autoconf and Makefile warnings, bug396.  [Ruben Diez]


* Verilator 3.821 2011/09/14

**** Fix PowerPC runtime error, bug288. [Ahmed El-Mahmoudy]

**** Fix internal error on integer casts, bug374. [Chandan Egbert]


* Verilator 3.820 2011/07/28

**   Support 'real' numbers and related functions.

***  Support 'const' variables in limited cases; similar to enums. [Alex Solomatnikov]

***  Support disable for loop escapes.

***  Support $fopen and I/O with integer instead of `verilator_file_descriptor.

***  Support coverage in -cc and -sc output modes.  [John Li]
     Note this requires SystemPerl 1.338 or newer.	

**** Fix vpi_register_cb using bad s_cb_data, bug370.  [by Thomas Watts]

**** Fix $display missing leading zeros in %0d, bug367.  [Alex Solomatnikov]

**** Use 'vluint64_t' for SystemC instead of (same sized) 'uint64' for MSVC++.


* Verilator 3.813 2011/06/28

***  Support bit vectors > 64 bits wide in DPI import and exports.
