@@ -8,9 +8,9 @@
 
 module t (/*AUTOARG*/
    // Outputs
-   o1, o8, o16, o32, o64, o65,
+   o1, o8, o16, o32, o64, o65, obv1, obv16,
    // Inputs
-   clk, i1, i8, i16, i32, i64, i65
+   clk, i1, i8, i16, i32, i64, i65, ibv1, ibv16
    );
 
    input clk;
@@ -29,6 +29,12 @@ module t (/*AUTOARG*/
    output [63:0] o64;
    output [64:0] o65;
 
+   input [0:0] 	 ibv1 /*verilator sc_bv*/;
+   input [15:0]  ibv16 /*verilator sc_bv*/;
+
+   output [0:0]   obv1 /*verilator sc_bv*/;
+   output [15:0]  obv16 /*verilator sc_bv*/;
+
    always @ (posedge clk) begin
       o1 <= i1;
       o8 <= i8;
@@ -36,6 +42,8 @@ module t (/*AUTOARG*/
       o32 <= i32;
       o64 <= i64;
       o65 <= i65;
+      obv1 <= ibv1;
+      obv16 <= ibv16;
    end
 
 endmodule
